--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
 <body>
-    <h1>This is my portfolio website!</h1>
+    <h1>Were not ready yet!</h1>
 </body>
 </html>
