adds css and some content

--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel = "stylesheet" href = "script.css">
     <title>Garrick's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
 <body>
-    <h1>We're not ready yet!</h1>
+   <div id = "header">
+        <p>Garrick Coughenour<br>
+        Web Developer</p>
+   </div>
+   <footer>Garrick Coughenour 2019 &copy;</footer>
 </body>
 </html>
