--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
 <body>
+    
    <div id = "header">
+       
         <p>Garrick Coughenour<br>
         Web Developer</p>
+        <nav id = "navbar">
+            <a href = "#">Home</a>
+            <a href = "#">Works</a>
+        </nav>
    </div>
-   <footer>Garrick Coughenour 2019 &copy;</footer>
+   <p>I am a Clarkston, Washington based web developer studying Web Development & Design at LCSC, this is my second semester as an official web
+       design major, however I have been coding since I started college, as I originally was studying Computer Science. I greatly enjoy making 
+       websites (some of my works can be found in the "Works" page of the site). Thanks for being interested in my work!
+   </p>
+&nbsp;
 </body>
+    <footer>Garrick Coughenour 2019 &copy;</footer>
 </html>
