--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
             <a href = "#">Contact Me</a>
         </nav>
    </div>
-   <div id = "info">
-   <img src = "images/ridingerpic2.jpg" id = "ridingerpic2"><p id = "bio"> I am a Clarkston, Washington based web developer studying Web Development & Design at LCSC, this is my second semester as an official web
+   <div id = "info"><img src = "images/ridingerpic2.jpg" id = "ridingerpic2"><p id = "bio"> I am a Clarkston, Washington based web developer studying Web Development & Design at LCSC, this is my second semester as an official web
        design major, however I have been coding since I started college, as I originally was studying Computer Science. I greatly enjoy making 
        websites (some of my works can be found in the "Works" page of the site). Thanks for being interested in my work!
    </p>
    </div>
-   <br>
 </body>
     <footer>Garrick Coughenour 2019 &copy;</footer>
 </html>
