add javascript stuff

--- a/index.html
+++ b/index.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel = "stylesheet" href = "script.css">
+    <link rel = "stylesheet" href = "main.css">
     <title>Garrick's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
 <body>
     
-   <div id = "header">
-       
+   <header>       
         <p>Garrick Coughenour<br>
         Web Developer</p>
+        <div id = "nav">
         <nav id = "navbar">
-            <a href = "#">Home</a>
-            <a href = "#">Works</a>
-            <a href = "#">Contact Me</a>
+            <a href = "index.html">Home</a>
+            <a href = "works.html">Works</a>
+            <a href="aboutme.html">About Me</a>
+            <a href = "contact.html">Contact Me</a>
         </nav>
-   </div>
+        </div>
+    </header>
    <div id = "info"><img src = "images/ridingerpic2.jpg" id = "ridingerpic2"><p id = "bio"> I am a Clarkston, Washington based web developer studying Web Development & Design at LCSC, this is my second semester as an official web
        design major, however I have been coding since I started college, as I originally was studying Computer Science. I greatly enjoy making 
        websites (some of my works can be found in the "Works" page of the site). Thanks for being interested in my work!
    </p>
    </div>
 </body>
-    <footer>Garrick Coughenour 2019 &copy;</footer>
+    <footer>&copy; Garrick Coughenour 2019</footer>
 </html>
