--- a/works.html
+++ b/works.html
@@ -8,15 +8,26 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-    <div id = "nav">
+    <header>
     <nav id = "navbar">
         <a href = "index.html">Home</a>
         <a href = "works.html">Works</a>
         <a href="aboutme.html">About Me</a>
         <a href = "contact.html">Contact Me</a>
     </nav>
+    </header>
+    <h1>JavaScript Programs I Have Made</h1>
     <a href = "game/index.html">Animal Guessing Game</a><br>
     <a href = "calculator/index.html">Calculator</a><p>NOTE: The calculator was made to resemble the calculator on windows applications</p>
-    </div>
+    <h1>Websites I have helped on, or am currently working on</h1>
+        <a href = "https://organicpainrelief.net/">Organic Pain Relief</a>
+        <p>Organic Pain Relief is a website I did some minor back end work on for a couple friends. OPR is a company focusing on
+            holistic healing with plants and herbs.
+        </p>
+        <a href = "http://lcvalleyreviews.com/">LC Valley Reviews</a>
+        <p>LC Valley Reviews is a project I have personally worked on for a few months now, designed to be used along side of the LC Valley Reviews
+            Facebook Page. LC Valley Reviews is a group made for LC residents to review local businesses to make finding the best companies easier. 
+            CURRENTLY IN CONSTRUCTION
+        </p>
 </body>
 </html>
