--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-    
+    <header>
     <nav id = "navbar">
         <a href = "index.html">Home</a>
         <a href = "works.html">Works</a>
         <a href="aboutme.html">About Me</a>
         <a href = "contact.html">Contact Me</a>
     </nav>
+    </header>
 </body>
 </html>
