--- a/contact.html
+++ b/contact.html
@@ -16,5 +16,12 @@
         <a href = "contact.html">Contact Me</a>
     </nav>
     </header>
+    <form action = contact.php method = "POST">
+        <label for="firstName">First Name: </label><input type = "text" name="firstName"><br><br>
+        <label for="lastName">Last Name: </label><input type = "text" name = "lastName"><br><br>
+        <label for="email">Email Address: </label><input type = "email" name = "email"><br><br>
+        <textarea name = "message" placeholder="Enter message here"></textarea><br>
+        <input type = "submit" value = "Submit">
+    </form>
 </body>
 </html>
