--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <a href = "contact.html">Contact Me</a>
     </nav>
     </header>
-    <form action = contact.php method = "POST">
+    <form action = https://formspree.io/gcoughenour@lcmail.lcsc.edu method = "POST">
         <label for="firstName">First Name: </label><input type = "text" name="firstName"><br><br>
         <label for="lastName">Last Name: </label><input type = "text" name = "lastName"><br><br>
         <label for="email">Email Address: </label><input type = "email" name = "email"><br><br>
