--- a/contact.html
+++ b/contact.html
@@ -16,11 +16,12 @@
         <a href = "contact.html">Contact Me</a>
     </nav>
     </header>
+    <h2>NOTE:  This form is powered by a site called "formspree.io". GitHub Pages does not allow direct emailing</h2>
     <form action = https://formspree.io/gcoughenour@lcmail.lcsc.edu method = "POST">
-        <label for="firstName">First Name: </label><input type = "text" name="firstName"><br><br>
-        <label for="lastName">Last Name: </label><input type = "text" name = "lastName"><br><br>
-        <label for="email">Email Address: </label><input type = "email" name = "email"><br><br>
-        <textarea name = "message" placeholder="Enter message here"></textarea><br>
+        <label for="firstName">First Name: </label><input type = "text" name="firstName" required><br><br>
+        <label for="lastName">Last Name: </label><input type = "text" name = "lastName" required><br><br>
+        <label for="email">Email Address: </label><input type = "email" name = "email" required><br><br>
+        <textarea name = "message" placeholder="Enter message here" required></textarea><br>
         <input type = "submit" value = "Submit">
     </form>
 </body>
