--- a/contact.html
+++ b/contact.html
@@ -24,5 +24,15 @@
         <textarea name = "message" placeholder="Enter message here" required></textarea><br>
         <input type = "submit" value = "Submit">
     </form>
+    <h2>Social Media</h2>
+    <a href = "https://www.facebook.com/garrick.coughenour?ref=bookmarks">
+    <img src = "images/facebook logo.png" width = 100 height = 100>
+    </a>
+    <a href = "https://twitter.com/GTCougneour">
+    <img src = "images/twitter logo.jpg" width = 100 height = 100>
+    </a>
+    <a href = "https://www.instagram.com/gtcoughenour/?hl=en">
+    <img src = "images/instagram logo.png" width = 100 height = 100>
+    </a>
 </body>
 </html>
