--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   
 <body>
     
-   <header>       
+   <header>
+        <img src = "images/websiteLogo.png" id = "logo">       
         <p>Garrick Coughenour<br>
         Web Developer</p>
         <div id = "nav">
