--- a/works.html
+++ b/works.html
@@ -17,12 +17,8 @@
         <a href = "contact.html">Contact Me</a>
     </nav>
     </header>
-    <a href = "game/index.html">Animal Guessing Game</a><br>
-    <a href = "calculator/index.html">Calculator</a><p>NOTE: The calculator was made to resemble the calculator on windows</p>
-    </div>
-    <h1>JavaScript Programs I Have Made</h1>
-    <a href = "game/index.html">Animal Guessing Game</a><br>
-    <h1>JavaScript Programs I Have Made</h1>
+</div>
+<h1>Javascript Programs I have Made</h1>
     <a href = "game/index.html">Animal Guessing Game</a><br>
     <a href = "calculator/index.html">Calculator</a><p>NOTE: The calculator was made to resemble the calculator on windows applications</p>
     <h1>Websites I have helped on, or am currently working on</h1>
