add some more css

--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <link rel = "stylesheet" href = "main.css">
     <title>Garrick's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+</head>
 <body>
     
    <header>
-        <img src = "images/websiteLogo.png" id = "logo">       
-        <p>Garrick Coughenour<br>
-        Web Developer</p>
+       
         <div id = "nav">
         <nav id = "navbar">
             <a href = "index.html">Home</a>
@@ -21,7 +19,12 @@
             <a href = "contact.html">Contact Me</a>
         </nav>
         </div>
-    </header>
+    </header> 
+        <div id = "name">
+        <img src = "images/websiteLogo.png" id = "logo">       
+        <p>Garrick Coughenour<br>
+        Web Developer</p>
+        </div>
    <div id = "info"><img src = "images/ridingerpic2.jpg" id = "ridingerpic2"><p id = "bio"> I am a Clarkston, Washington based web developer studying Web Development & Design at LCSC, this is my second semester as an official web
        design major, however I have been coding since I started college, as I originally was studying Computer Science. I greatly enjoy making 
        websites (some of my work can be found in the "Works" page of the site). Thanks for being interested in my work!
