add about me info

--- a/aboutme.html
+++ b/aboutme.html
@@ -16,5 +16,37 @@
         <a href = "contact.html">Contact Me</a>
     </nav>
 </header>
+<h1>About Me</h1>
+<p>Graduated from Clarkston Highschool in 2017, I went straight from school to college. I began my education in Computer Science where I first began
+    coding. Half way into the semester I didn't feel like I was being as creative as I thought I could be, I wanted to be able to look at
+    something and say "I made that!". After looking into the Web Development and Design degree I felt I could let my creativity flow a little more freely. So I decided to switch my major to
+    Web Development and Design. Now I really enjoy my professors, classes, and most importantly, my work. Now when I look at my assignments and other things
+    I have done I have pride in being able to say "I made that!" and I am proud of myself. <h3>My Specialties:</h3>
+    <strong>Items in bold I am currently learning:</strong>
+    <ul id = "specialties">
+        <li>Backend Development
+            <ul id = "backendSpecialties">
+                <li>JavaScript</li>
+                <li>PHP</li>
+            </ul>
+
+        </li>
+    <li>WordPress</li>
+    <li><strong>C#</strong></li>
+    <li><strong>MySQL</strong></li>
+    </ul>
+
+        My parents, Brian and Laura Coughenour have been a driving part of my life in being and doing what I want in my education. They have taught me what to do, (and
+        not do) as I slowly become my own person. My mom went through college when I was a child and I was about six years old when she graduated. My dad also went, to 
+        college while I was a child, so they both had very strong work ethics, which I inherited. I'm thankful for the strong work ethic they have instilled in me because
+        it has caused me to do better in class, and work. I currently am employed at Tomato Brothers in Clarkston, Washington as a support staff. I originally started working
+        there as a dishwasher working in the back. Luckily my strong work ethic was able to get me out of the kitchen and into a much cleaner(and dryer!) work environment.
+        <div id = "images">
+
+        <figure id = "figDad"><img src = "images/dad.jpg" id = "dad"><figcaption>My Dad</figcaption></figure>
+        <figure id = "figMom"><img src = "images/mom.jpg" id = "mom"><figcaption>My Mom and Brother</figcaption></figure>
+    </div>
+        
+</p>
 </body>
 </html>
