remove alt text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Garrick Coughenour<br>
         Web Developer</p>
         </div>
-   <div id = "info"><img src = "" id = "pic1" alt = "Photo By: ridingers.com"><p id = "bio"> I am a Clarkston, Washington based web developer studying Web Development & Design at LCSC, this is my second semester as an official web
+   <div id = "info"><img src = "" id = "pic1" alt = ""><p id = "bio"> I am a Clarkston, Washington based web developer studying Web Development & Design at LCSC, this is my second semester as an official web
        design major, however I have been coding since I started college, as I originally was studying Computer Science. I greatly enjoy making 
        websites (some of my work can be found in the "Works" page of the site). Thanks for being interested in my work!
    </p>
