start new work on works page

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <header>
+        <div id = "nav">
     <nav id = "navbar">
         <a href = "index.html">Home</a>
         <a href = "works.html">Works</a>
         <a href="aboutme.html">About Me</a>
         <a href = "contact.html">Contact Me</a>
     </nav>
+    </div>
 </header>
 <h1>About Me</h1>
 <p>Graduated from Clarkston Highschool in 2017, I went straight from school to college. I began my education in Computer Science where I first began
