--- a/works.html
+++ b/works.html
@@ -22,8 +22,8 @@
     <a href = "game/index.html">Animal Guessing Game</a><br>
     <a href = "calculator/index.html">Calculator</a><p>NOTE: The calculator was made to resemble the calculator on windows applications</p>
     <h1>Websites I have helped on, or am currently working on</h1>
-        <a href = "https://organicpainrelief.net/">Organic Pain Relief</a>
-        <p>Organic Pain Relief is a website I did some minor back end work on for a couple friends. OPR is a company focusing on
+        <a href = "https://organicpainrelief.net/">Organic Pain Relief</a><img src = "images/OPR.PNG" id = "OPR">
+        <p id = "oprInfo">Organic Pain Relief is a website I did some minor back end work on for a couple friends. OPR is a company focusing on
             holistic healing with plants and herbs.
         </p>
         <a href = "http://lcvalleyreviews.com/">LC Valley Reviews</a>
