--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <header>
+        <div id = "nav">
     <nav id = "navbar">
         <a href = "index.html">Home</a>
         <a href = "works.html">Works</a>
         <a href="aboutme.html">About Me</a>
         <a href = "contact.html">Contact Me</a>
     </nav>
+    </div>
     </header>
     <h2>NOTE:  This form is powered by a site called "formspree.io". GitHub Pages does not allow direct emailing</h2>
     <form action = https://formspree.io/gcoughenour@lcmail.lcsc.edu method = "POST">
