--- a/works.html
+++ b/works.html
@@ -26,7 +26,7 @@
         <p id = "oprInfo">Organic Pain Relief is a website I did some minor back end work on for a couple friends. OPR is a company focusing on
             holistic healing with plants and herbs.
         </p>
-        <a href = "http://lcvalleyreviews.com/">LC Valley Reviews</a>
+        <a href = "http://lcvalleyreviews.com/">LC Valley Reviews</a><img src = "images/" id = "lcvr">
         <p>LC Valley Reviews is a project I have personally worked on for a few months now, designed to be used along side of the LC Valley Reviews
             Facebook Page. LC Valley Reviews is a group made for LC residents to review local businesses to make finding the best companies easier. 
             CURRENTLY IN CONSTRUCTION
