--- a/index.html
+++ b/index.html
@@ -1,34 +1,23 @@
-<!DOCTYPE <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html ng-app= "FinalApp">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel = "stylesheet" href = "main.css">
-    <title>Garrick's Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
+    <script src = "app.js"></script>
+    <link rel = "stylesheet" href = "style.css">
+    <title>MySQL API</title>
 </head>
-<body>
+<body ng-controller = "questsCtrl">
+    <h1>Skyrim Quests Board</h1>
+    <ul>
+        <li ng-repeat = "q in quests">Quest Info: {{q.questInfo}} | Quest Location: {{q.questLocation}} | Quest Payout: {{q.questPayout}}</li>
+
+    </ul>
     
-   <header>     
-        <div id = "nav">
-        <nav id = "navbar">
-            <a href = "index.html">Home</a>
-            <a href = "works.html">Works</a>
-            <a href="aboutme.html">About Me</a>
-            <a href = "contact.html">Contact Me</a>
-        </nav>
-        </div>
-    </header> 
-        <div id = "name">
-        <img src = "images/websiteLogo.png" id = "logo">       
-        <p>Garrick Coughenour<br>
-        Web Developer</p>
-        </div>
-   <div id = "info"><img src = "images/ridingerpic2.jpg" id = "pic1" alt = "Photo By: ridingers.com PROTECTED BY TEACH ACT"><p id = "bio"> I am a Clarkston, Washington based web developer studying Web Development & Design at LCSC, this is my second semester as an official web
-       design major, however I have been coding since I started college, as I originally was studying Computer Science. I greatly enjoy making 
-       websites (some of my work can be found in the "Works" page of the site). Thanks for being interested in my work!
-   </p>
-   </div>
+    <h2>Add A New Quest</h2>
+    <p>Quest Info: </p><input type = "text" ng-model = "new_quest_info">
+    <p>Quest Location: </p><input type = "text" ng-model = "new_quest_location">
+    <p>Quest Payout: </p><input type = "number" ng-model = "new_quest_payout">
+    <button ng-click = "add()">Add</button>
 </body>
-    <footer>&copy; Garrick Coughenour 2019</footer>
 </html>
